@@ -96,6 +96,13 @@ GWENHYWFAR_API GWEN_TIME *GWEN_Time_fromString(const char *s,
 GWENHYWFAR_API GWEN_TIME *GWEN_Time_fromUtcString(const char *s,
                                                   const char *tmpl);
 
+GWENHYWFAR_API int GWEN_Time_toString(const GWEN_TIME *t,
+                                      const char *tmpl,
+                                      GWEN_BUFFER *buf);
+GWENHYWFAR_API int GWEN_Time_toUtcString(const GWEN_TIME *t,
+                                         const char *tmpl,
+                                         GWEN_BUFFER *buf);
+
 
 /**
  * Creates a GWEN_TIME object from the return value of @ref GWEN_Time_Seconds.
